[gd_scene load_steps=10 format=3 uid="uid://cdhoi52y1rind"]

[ext_resource type="Script" path="res://adventure/dog.gd" id="1_gf4be"]
[ext_resource type="Texture2D" uid="uid://uul24yr3utpp" path="res://adventure/assets/others/dogs-removebg-preview.png" id="1_jkt3n"]
[ext_resource type="PackedScene" uid="uid://ty3v2hoqbn0a" path="res://adventure/scenes/killzone.tscn" id="2_xn3o4"]
[ext_resource type="Script" path="res://adventure/collision_shape_2d.gd" id="4_r0do3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bqs07"]
atlas = ExtResource("1_jkt3n")
region = Rect2(100, 0, 50, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxy8s"]
atlas = ExtResource("1_jkt3n")
region = Rect2(50, 0, 50, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_73n3p"]
atlas = ExtResource("1_jkt3n")
region = Rect2(0, 0, 50, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_a6ydl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqs07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxy8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73n3p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qachc"]
size = Vector2(34, 25)

[node name="DOG" type="Node2D"]
script = ExtResource("1_gf4be")

[node name="AnimatedSprite2D_dog" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -0.5)
scale = Vector2(1, 1.02632)
sprite_frames = SubResource("SpriteFrames_a6ydl")
autoplay = "default"
frame_progress = 0.0111792
flip_h = true

[node name="RayCastright_dog" type="RayCast2D" parent="AnimatedSprite2D_dog"]
target_position = Vector2(17, 4.38462)

[node name="RayCastleft_dog" type="RayCast2D" parent="AnimatedSprite2D_dog"]
target_position = Vector2(-17, 7.30769)

[node name="killzone" parent="." instance=ExtResource("2_xn3o4")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
shape = SubResource("RectangleShape2D_qachc")
script = ExtResource("4_r0do3")
